# transducer

./: .gitignore  README.md  build.py  decoders.py  ref_transduce.py  setup.py  test.py  torch_benchmarks.py  torch_test.py  transducer.cpp  transducer.py
benchmarks/: torch_benchmarks.py
functions/: transducer.py
src/: transducer.c  transducer.h
transducer/: CMakeLists.txt  __init__.py  _transducer.cpp  benchmark.cpp  benchmark_cuda.cu  test.cpp  test.h  test_cuda.cu  torch_binding.py  transducer.cpp  transducer.h  transducer_cpu.cpp  transducer_cpu.h  transducer_cuda.cu  transducer_cuda.h
transducer/cmake/: Buildpybind11.cmake
